change to UUID not string, remove tool response, just be a list of tools instead.
