# src/main/java/io/swagger/api/MineApiController.java
@@ -1,7 +1,6 @@
 package io.swagger.api;
 
 import io.swagger.model.DataTool;
-import io.swagger.model.DataToolResponse;
 import io.swagger.model.MineConfig;
 import io.swagger.model.MineDescriptor;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -14,17 +13,11 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
 
-import javax.validation.constraints.*;
 import javax.validation.Valid;
 import javax.servlet.http.HttpServletRequest;
-import java.io.IOException;
+
 import java.util.List;
-import java.util.Map;
 import java.util.UUID;
 
 @javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2019-05-30T09:11:48.356Z[GMT]")
@@ -43,7 +36,7 @@ public class MineApiController implements MineApi {
         this.request = request;
     }
 
-    public ResponseEntity<Void> deleteConfig(@ApiParam(value = "ID of mine config to delete",required=true) @PathVariable("mineId") String mineId) {
+    public ResponseEntity<Void> deleteConfig(@ApiParam(value = "ID of mine config to delete",required=true) @PathVariable("mineId") UUID mineId) {
         String accept = request.getHeader("Accept");
         MineConfig mineConfig = MineConfigManager.MINE_CONFIGS.get(mineId);
         if (mineConfig == null) {
@@ -53,7 +46,7 @@ public class MineApiController implements MineApi {
         return new ResponseEntity<Void>(HttpStatus.OK);
     }
 
-    public ResponseEntity<MineConfig> getMineConfig(@ApiParam(value = "ID of mine to fetch",required=true) @PathVariable("mineId") String mineId) {
+    public ResponseEntity<MineConfig> getMineConfig(@ApiParam(value = "ID of mine to fetch",required=true) @PathVariable("mineId") UUID mineId) {
         String accept = request.getHeader("Accept");
         MineConfig mineConfig = MineConfigManager.MINE_CONFIGS.get(mineId);
         if (mineConfig == null) {
@@ -62,7 +55,7 @@ public class MineApiController implements MineApi {
         return new ResponseEntity<MineConfig>(mineConfig, HttpStatus.OK);
     }
 
-    public ResponseEntity<MineDescriptor> getMineDescriptors(@ApiParam(value = "ID of mine to fetch",required=true) @PathVariable("mineId") String mineId) {
+    public ResponseEntity<MineDescriptor> getMineDescriptors(@ApiParam(value = "ID of mine to fetch",required=true) @PathVariable("mineId") UUID mineId) {
         String accept = request.getHeader("Accept");
         MineConfig mineConfig = MineConfigManager.MINE_CONFIGS.get(mineId);
         if (mineConfig == null) {
@@ -72,30 +65,35 @@ public class MineApiController implements MineApi {
         return new ResponseEntity<MineDescriptor>(mineDescriptor, HttpStatus.OK);
     }
 
-    public ResponseEntity<String> getNewMine() {
+    public ResponseEntity<UUID> getNewMine() {
         String accept = request.getHeader("Accept");
-        String mineId = java.util.UUID.randomUUID().toString();
+        UUID mineId = java.util.UUID.randomUUID();
         MineConfig mineConfig = new MineConfig();
-        MineConfigManager.MINE_CONFIGS.put(mineId.toString(), mineConfig);
-        return new ResponseEntity<String>(mineId, HttpStatus.OK);
+        MineConfigManager.MINE_CONFIGS.put(mineId, mineConfig);
+        return new ResponseEntity<UUID>(mineId, HttpStatus.OK);
     }
 
-    public ResponseEntity<List<DataTool>> mineDataToolsMineIdGet(@ApiParam(value = "ID of mineconfig to fetch tools for",required=true) @PathVariable("mineId") String mineId) {
+    public ResponseEntity<List<DataTool>> mineDataToolsMineIdGet(@ApiParam(value = "ID of mineconfig to fetch tools for",required=true) @PathVariable("mineId") UUID mineId) {
         String accept = request.getHeader("Accept");
         MineConfig mineConfig = MineConfigManager.MINE_CONFIGS.get(mineId);
         if (mineConfig == null) {
             return new ResponseEntity("Mine Config not found", HttpStatus.BAD_REQUEST);
         }
         List<DataTool> dataTools = mineConfig.getDataTools();
-        return new ResponseEntity<List<DataTool>>(dataTools, HttpStatus.OK);;
+        return new ResponseEntity<List<DataTool>>(dataTools, HttpStatus.OK);
     }
 
-    public ResponseEntity<DataToolResponse> mineDataToolsMineIdPost(@ApiParam(value = "ID of mineconfig to set tools for",required=true) @PathVariable("mineId") String mineId) {
+    public ResponseEntity<List<DataTool>> mineDataToolsMineIdPost(@ApiParam(value = "ID of mineconfig to set tools for",required=true) @PathVariable("mineId") UUID mineId) {
         String accept = request.getHeader("Accept");
-        return new ResponseEntity<DataToolResponse>(HttpStatus.NOT_IMPLEMENTED);
+        MineConfig mineConfig = MineConfigManager.MINE_CONFIGS.get(mineId);
+        if (mineConfig == null) {
+            return new ResponseEntity("Mine Config not found", HttpStatus.BAD_REQUEST);
+        }
+        List<DataTool> dataToolResponse = mineConfig.getDataTools();
+        return new ResponseEntity<List<DataTool>>(dataToolResponse, HttpStatus.OK);
     }
 
-    public ResponseEntity<Void> setMineDescriptors(@ApiParam(value = "Descriptors to set for Mine" ,required=true )  @Valid @RequestBody MineDescriptor body,@ApiParam(value = "ID of mine to fetch",required=true) @PathVariable("mineId") String mineId) {
+    public ResponseEntity<Void> setMineDescriptors(@ApiParam(value = "Descriptors to set for Mine" ,required=true )  @Valid @RequestBody MineDescriptor body,@ApiParam(value = "ID of mine to fetch",required=true) @PathVariable("mineId") UUID mineId) {
         String accept = request.getHeader("Accept");
 
         String mineName = body.getMineName().toString();
